--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "react-youtube": "^10.1.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.12",
+    "swiper": "^11.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
